JumpScript/tests/baselines/reference/es6ImportWithoutFromClauseWithExport.errors.txt
tests/cases/compiler/client.jump(1,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.jump (0 errors) ====
    export var a = 10;
    
==== tests/cases/compiler/client.jump (1 errors) ====
    export import "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.